[ITB-1632] Prevent wrapping of buttons in the listing of test cases

--- a/gitb-ui/ui/src/app/components/test-case-display/test-case-display.component.less
+++ b/gitb-ui/ui/src/app/components/test-case-display/test-case-display.component.less
@@ -59,6 +59,7 @@
         &> .btn-toolbar {
             margin-left: 20px;
             display: flex;
+            flex-wrap: nowrap;
         }
         .testCaseStatus {
             margin-left: 38px;
